--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,271 @@ body {
   html {
     font-size: 50%; } }
 
+.main-info-section {
+  position: relative;
+  align-items: center;
+  width: 100vw;
+  height: calc(100vh);
+  min-height: 500px;
+  overflow-x: hidden; }
+  .main-info-section .buttons {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 40px; }
+  .main-info-section::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.15;
+    background-image: url("/img/main.jpg");
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .main-info-section .text {
+    margin: 0 auto;
+    text-align: center; }
+    .main-info-section .text .word {
+      display: inline-block;
+      margin-right: 8px; }
+    .main-info-section .text h1 {
+      color: #fff;
+      font-size: 5rem;
+      cursor: context-menu; }
+    .main-info-section .text span:not(.navbar-toggler-icon) {
+      display: inline-block; }
+    .main-info-section .text a {
+      padding: 12px 25px;
+      background-color: none;
+      border: 3px solid #4a739a;
+      border-radius: 10px;
+      color: #4a739a;
+      font-size: 1.4rem !important;
+      letter-spacing: 2px;
+      position: relative;
+      top: 80px;
+      overflow: hidden;
+      transition: 0.5s;
+      display: inline-block;
+      width: 190px !important; }
+      .main-info-section .text a:hover {
+        color: #fff; }
+      .main-info-section .text a::before {
+        content: "";
+        background-color: #4a739a;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 0%;
+        z-index: -1;
+        transition: 0.5s; }
+      .main-info-section .text a:hover::before {
+        height: 100%; }
+  .main-info-section .profile-image img {
+    max-width: 550px;
+    height: calc(100vh - 150px); }
+  .main-info-section span.name {
+    color: #4a739a; }
+  .main-info-section span.m-left {
+    margin-left: 1px; }
+  .main-info-section span:not(.word):not(.navbar-toggler-icon):not(.phonespan):hover {
+    color: #8cc0f0;
+    animation: bounce 1.3s; }
+
+@media screen and (max-width: 1435px) {
+  .right-corner {
+    right: -14% !important;
+    transform: scale(2.5) !important; }
+  .left-corner {
+    left: -20% !important; }
+  .bottom {
+    left: 93% !important;
+    bottom: -5% !important; }
+  .profile-image {
+    display: none; } }
+
+@media screen and (max-width: 1200px) {
+  .about h1,
+  .work h1 {
+    text-align: center; }
+  .contact h1 {
+    text-align: center !important; }
+  .right-corner {
+    right: -4% !important;
+    top: -7%;
+    transform: scale(1.4) !important; }
+  .bottom {
+    left: 90% !important;
+    bottom: -30%;
+    transform: scale(1.2) !important; } }
+
+@media screen and (max-width: 985px) {
+  .work {
+    margin-top: 50px !important; }
+  div[class^="tag-"] {
+    padding: 0 !important; }
+  div[class^="tag-"] p {
+    text-align: center !important;
+    margin: 0 auto;
+    font-weight: bold;
+    font-size: 3rem !important;
+    padding: 0 !important;
+    transform: none !important; } }
+
+@media screen and (max-width: 935px) {
+  html {
+    font-size: 50% !important; }
+  /* firefox only */
+  @-moz-document url-prefix() {
+    html {
+      font-size: 45% !important; } } }
+
+@media screen and (max-width: 800px) {
+  .buttons {
+    flex-direction: column;
+    align-items: center; } }
+
+@media screen and (max-width: 725px) {
+  html {
+    font-size: 15px; }
+    html .wrapper {
+      padding: 0 75px 0 75px !important; }
+    html .nav-content-wrapper {
+      position: relative; }
+    html .nav-brand {
+      display: inline-block;
+      position: absolute;
+      color: white;
+      font-size: 2.5rem;
+      display: flex;
+      align-items: center;
+      font-family: "Great Vibes", cursive;
+      z-index: 2;
+      left: 5%;
+      top: 55%;
+      transform: translate(5%, -45%); }
+    html .hamburger {
+      cursor: pointer;
+      position: absolute;
+      right: 5%;
+      top: 50%;
+      padding: 3px;
+      transform: translate(-5%, -50%);
+      z-index: 2; }
+    html .line {
+      width: 30px;
+      height: 3px;
+      background: white;
+      margin: 5px; }
+    html .nav-links {
+      position: fixed;
+      max-width: none;
+      background: #707070;
+      height: 100vh;
+      width: 100vw;
+      flex-direction: column;
+      clip-path: circle(100px at 95% -20%);
+      -webkit-clip-path: circle(100px at 95% -20%);
+      transition: all 1s ease-out;
+      pointer-events: none; }
+      html .nav-links li {
+        opacity: 0; }
+        html .nav-links li:nth-child(1) {
+          transition: all 0.5s ease 0.1s; }
+        html .nav-links li:nth-child(2) {
+          transition: all 0.5s ease 0.2s; }
+        html .nav-links li:nth-child(3) {
+          transition: all 0.5s ease 0.3s; }
+        html .nav-links li:nth-child(4) {
+          transition: all 0.5s ease 0.4s; }
+        html .nav-links li:nth-child(5) {
+          transition: all 0.5s ease 0.5s; }
+        html .nav-links li.fade {
+          opacity: 1; }
+    html .nav-links.open {
+      clip-path: circle(1700px at 90% -10%);
+      -webkit-clip-path: circle(1700px at 90% -10%);
+      pointer-events: all; } }
+
+@media screen and (max-width: 630px) {
+  .contact .circle {
+    width: 70px !important;
+    height: 70px !important; }
+  .icon-wrapper img {
+    width: 35px !important; }
+  i.fa-instagram {
+    transform: scale(3.5) !important; } }
+
+@media screen and (max-width: 580px) {
+  html {
+    font-size: 13px; }
+    html .left-corner {
+      transform: scale(1.2) !important; }
+    html .wrapper {
+      padding: 0 50px 0 50px !important; }
+    html #navbar .nav-link:hover {
+      transform: none !important;
+      color: white; }
+    html #navbar li.nav-item {
+      margin-left: 5px; } }
+
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 6px !important; }
+    html .wrapper {
+      padding: 20px !important; }
+    html .work .card-wrapper {
+      transform: scale(0.8) !important; }
+    html .work h1 {
+      font-size: 12rem !important; }
+    html .about .about-me-info {
+      text-align: center !important; }
+    html .about h1 {
+      font-size: 12rem !important; }
+    html .about .right-corner,
+    html .about .left-corner,
+    html .about .bottom {
+      display: none !important; }
+    html .contact .contact h1 {
+      font-size: 12rem !important; }
+    html .contact .circle {
+      width: 50px !important;
+      height: 50px !important; }
+    html .contact .icon-wrapper img {
+      width: 25px !important; }
+    html .contact i.fa-instagram {
+      transform: scale(3) !important; }
+    html .skills h1 {
+      font-size: 12rem !important; }
+    html div[class^="category-"] {
+      grid-template-columns: none !important; }
+    html .main-info-section #main-h1 {
+      font-size: 4rem; } }
+
+@media screen and (max-width: 370px) {
+  h1:not(#main-h1):not(#nav-h1) {
+    font-size: 13rem !important; }
+  #main-h1 {
+    font-size: 4rem; }
+  .card-wrapper {
+    transform: scale(0.8) !important; }
+  .bottom {
+    transform: scale(1) !important; }
+  .left-corner {
+    transform: scale(1.2) !important; }
+  .right-corner {
+    transform: scale(1.4) !important; }
+  .wrapper {
+    padding: 0 40px 0 40px !important; }
+  div[class^="category-"] {
+    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr)) !important; } }
+
 .mt-s {
   margin-top: 25px; }
 
