--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,172 @@ nav {
       .about .about-me-info .star:after {
         transform: rotate(60deg); }
 
+/* animations */
+@keyframes bounce {
+  0% {
+    transform: translateY(-7px); }
+  80% {
+    transform: translateY(3px); }
+  100% {
+    transform: translateY(0px); } }
+
+/* rotation animation */
+@-webkit-keyframes rotate /* Safari and Chrome */ {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@-moz-keyframes rotate {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@-o-keyframes rotate {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@keyframes rotate {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+/* orbit animation */
+@-webkit-keyframes forwardOrbit {
+  0% {
+    -webkit-transform: rotate(0deg) translateX(500px) rotate(0deg); }
+  20% {
+    -webkit-transform: rotate(180deg) translateX(390px) rotate(-180deg); }
+  40% {
+    -webkit-transform: rotate(450deg) translateX(250px) rotate(-450deg); }
+  60% {
+    -webkit-transform: rotate(560deg) translateX(130px) rotate(-560deg); }
+  80% {
+    -webkit-transform: rotate(700deg) translateX(75px) rotate(-700deg); }
+  100% {
+    -webkit-transform: rotate(720deg) translate(0) rotate(-720deg); } }
+
+@-moz-keyframes forwardOrbit {
+  0% {
+    -moz-transform: rotate(0deg) translateX(500px) rotate(0deg); }
+  20% {
+    -moz-transform: rotate(180deg) translateX(390px) rotate(-180deg); }
+  40% {
+    -moz-transform: rotate(450deg) translateX(250px) rotate(-450deg); }
+  60% {
+    -moz-transform: rotate(560deg) translateX(130px) rotate(-560deg); }
+  80% {
+    -moz-transform: rotate(700deg) translateX(75px) rotate(-700deg); }
+  100% {
+    -moz-transform: rotate(720deg) translate(0) rotate(-720deg); } }
+
+@-o-keyframes forwardOrbit {
+  0% {
+    -o-transform: rotate(0deg) translateX(500px) rotate(0deg); }
+  20% {
+    -o-transform: rotate(180deg) translateX(390px) rotate(-180deg); }
+  40% {
+    -o-transform: rotate(450deg) translateX(250px) rotate(-450deg); }
+  60% {
+    -o-transform: rotate(560deg) translateX(130px) rotate(-560deg); }
+  80% {
+    -o-transform: rotate(700deg) translateX(75px) rotate(-700deg); }
+  100% {
+    -o-transform: rotate(720deg) translate(0) rotate(-720deg); } }
+
+@keyframes forwardOrbit {
+  0% {
+    transform: rotate(0deg) translateX(500px) rotate(0deg); }
+  20% {
+    transform: rotate(180deg) translateX(390px) rotate(-180deg); }
+  40% {
+    transform: rotate(450deg) translateX(250px) rotate(-450deg); }
+  60% {
+    transform: rotate(560deg) translateX(130px) rotate(-560deg); }
+  80% {
+    transform: rotate(700deg) translateX(75px) rotate(-700deg); }
+  100% {
+    transform: rotate(720deg) translate(0) rotate(-720deg); } }
+
+.orbit {
+  animation: forwardOrbit 2s linear; }
+
+/* inverse orbit animation */
+@-webkit-keyframes inverseOrbit {
+  0% {
+    -webkit-transform: rotate(0deg) translateX(600px) rotate(0deg); }
+  33% {
+    -webkit-transform: rotate(-180deg) translateX(400px) rotate(180deg); }
+  66% {
+    -webkit-transform: rotate(-360deg) translateX(200px) rotate(360deg); }
+  100% {
+    -webkit-transform: rotate(-540deg) translate(0) rotate(540deg); } }
+
+@-moz-keyframes inverseOrbit {
+  0% {
+    -moz-transform: rotate(0deg) translateX(600px) rotate(0deg); }
+  33% {
+    -moz-transform: rotate(-180deg) translateX(400px) rotate(180deg); }
+  66% {
+    -moz-transform: rotate(-360deg) translateX(200px) rotate(360deg); }
+  100% {
+    -moz-transform: rotate(-540deg) translate(0) rotate(540deg); } }
+
+@-o-keyframes inverseOrbit {
+  0% {
+    -o-transform: rotate(0deg) translateX(600px) rotate(0deg); }
+  33% {
+    -o-transform: rotate(-180deg) translateX(400px) rotate(180deg); }
+  66% {
+    -o-transform: rotate(-360deg) translateX(200px) rotate(360deg); }
+  100% {
+    -o-transform: rotate(-540deg) translate(0) rotate(540deg); } }
+
+@keyframes inverseOrbit {
+  0% {
+    transform: rotate(0deg) translateX(600px) rotate(0deg); }
+  33% {
+    transform: rotate(-180deg) translateX(400px) rotate(180deg); }
+  66% {
+    transform: rotate(-360deg) translateX(200px) rotate(360deg); }
+  100% {
+    transform: rotate(-540deg) translate(0) rotate(540deg); } }
+
+.inverse-orbit {
+  animation: inverseOrbit 2s linear; }
+
 @media screen and (max-width: 1435px) {
   .right-corner {
     right: -14% !important;
@@ -392,6 +558,9 @@ nav {
 
 .mt-s {
   margin-top: 25px; }
+
+#root {
+  overflow: hidden; }
 
 body {
   font-size: 1rem;
