--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./components/main";
 @import "./components/navbar";
 @import "./components/about";
+@import "./components/skills";
 @import "./animations/bounce";
 @import "./animations/rotate";
 @import "./animations/orbits";
