--- a/src/sass/media/_media.scss
+++ b/src/sass/media/_media.scss
@@ -45,11 +45,11 @@
     margin-top: 50px !important;
   }
 
-  div[class^="tag-"] {
+  div[class^="tag"] {
     padding: 0 !important;
   }
 
-  div[class^="tag-"] p {
+  div[class^="tag"] p {
     text-align: center !important;
     margin: 0 auto;
     font-weight: bold;
