Add Projects section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,8 @@
 @import "./components/navbar";
 @import "./components/about";
 @import "./components/skills";
+@import "./components/card";
+@import "./components/projects";
 @import "./animations/bounce";
 @import "./animations/rotate";
 @import "./animations/orbits";
