Add contacts section without any functionality

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/skills";
 @import "./components/card";
 @import "./components/projects";
+@import "./components/contact";
 @import "./animations/bounce";
 @import "./animations/rotate";
 @import "./animations/orbits";
