--- a/src/index.css
+++ b/src/index.css
@@ -373,6 +373,64 @@ nav {
   .work h2 {
     font-size: 22px !important; } }
 
+.contact {
+  margin-top: 50px;
+  height: minmax(calc(50vh), auto);
+  width: 100vw;
+  position: relative; }
+  .contact::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.2;
+    background-image: url("/img/mail.png");
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .contact h1 {
+    color: #ddd5d5cc !important;
+    text-align: center;
+    font-size: 16rem; }
+  .contact .icon-wrapper {
+    max-width: 800px;
+    margin: 50px auto 0px auto;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: space-between; }
+    .contact .icon-wrapper i {
+      color: #187064;
+      font-size: 1.6rem;
+      transform: scale(2.8); }
+      .contact .icon-wrapper i .fa-instagram {
+        transform: scale(3.7); }
+    .contact .icon-wrapper img {
+      width: 50px;
+      margin-top: 4px; }
+  .contact .circle {
+    opacity: 0.7;
+    background-color: #fcfcfc !important;
+    border-radius: 50%;
+    width: 90px;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; }
+
+/* firefox only */
+@-moz-document url-prefix() {
+  .icon-wrapper img {
+    width: 40px;
+    margin-top: 4px; }
+  .icon-wrapper i {
+    transform: scale(3.3) !important; }
+  i.fa-instagram {
+    transform: scale(4) !important; } }
+
 /* animations */
 @keyframes bounce {
   0% {
