--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/card";
 @import "./components/projects";
 @import "./components/contact";
+@import "./components/footer";
 @import "./animations/bounce";
 @import "./animations/rotate";
 @import "./animations/orbits";
