--- a/src/index.css
+++ b/src/index.css
@@ -431,6 +431,31 @@ nav {
   i.fa-instagram {
     transform: scale(4) !important; } }
 
+footer hr {
+  border: 2px solid #969494; }
+
+footer p {
+  text-align: center;
+  color: #707070;
+  font-size: 2rem;
+  padding: 10px 0; }
+
+footer .call {
+  margin: 0 auto;
+  max-width: 190px;
+  text-align: center; }
+
+footer .call i {
+  transform: scale(1.4) rotate(-45deg);
+  color: #22796d;
+  display: inline-block;
+  font-size: 2rem; }
+
+footer .call span {
+  color: #707070 !important;
+  margin-left: 15px;
+  font-size: 2rem; }
+
 /* animations */
 @keyframes bounce {
   0% {
