--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./components/projects";
 @import "./components/contact";
 @import "./components/footer";
+@import "./components/video-card";
 @import "./animations/bounce";
 @import "./animations/rotate";
 @import "./animations/orbits";
