--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,6 +6,7 @@
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
   font-size: 62.5%; /*10px*/
   font-family: sans-serif;
@@ -28,4 +29,3 @@ body {
     font-size: 50%;
   }
 }
-
