--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,7 +1,5 @@
 nav {
-  height: 5vh;
-  background: transparent;
-  min-height: 40px;
+  height: 50px;
   position: fixed;
   top: 0;
   left: 0;
@@ -45,4 +43,3 @@ nav {
   background: #707070b9 !important;
   transition: background 500ms;
 }
-
