--- a/src/sass/components/_skills.scss
+++ b/src/sass/components/_skills.scss
@@ -33,7 +33,7 @@
     height: 100%;
     z-index: -1;
     opacity: 0.2;
-    background-image: url("/img/skills.jpg");
+    background-image: url("/img/skills.webp");
     background-repeat: no-repeat;
     background-size: cover;
   }
