--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -14,7 +14,7 @@
     height: 100%;
     z-index: -1;
     opacity: 0.2;
-    background-image: url("/img/mail.png");
+    background-image: url("/img/mail.webp");
     background-repeat: no-repeat;
     background-size: cover;
   }
