--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -24,7 +24,7 @@
     height: 100%;
     z-index: -1;
     opacity: 0.15;
-    background-image: url("/img/main.jpg");
+    background-image: url("/img/main.webp");
     background-repeat: no-repeat;
     background-size: cover;
   }
