--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -54,14 +54,25 @@
       font-size: 13px !important;
     }
 
-    i.fa-film {
+    i.video-blog {
       color: rgb(148, 151, 151);
       font-size: 13px !important;
       align-self: center;
     }
 
-    i.fa-film:hover {
+    i.video-blog:hover {
       color: rgb(200, 202, 202);
+      cursor: pointer;
+    }
+
+    i.video-sorting {
+      color: rgb(105, 137, 138);
+      font-size: 13px !important;
+      align-self: center;
+    }
+
+    i.video-sorting:hover {
+      color: rgb(165, 190, 190);
       cursor: pointer;
     }
 
