--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -57,7 +57,7 @@ hr {
 .work-category {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .text p,
