--- a/src/index.css
+++ b/src/index.css
@@ -159,9 +159,6 @@ nav {
     .about .about-me-info p {
       font-size: 2.6rem;
       color: #bebebe; }
-    .about .about-me-info p:nth-child(2),
-    .about .about-me-info p:nth-child(3) {
-      margin-top: 30px; }
     .about .about-me-info .right-corner {
       position: absolute;
       right: -20%;
@@ -401,7 +398,7 @@ nav {
     text-align: center;
     font-size: 16rem; }
   .contact .icon-wrapper {
-    max-width: 800px;
+    max-width: 200px;
     margin: 50px auto 0px auto;
     padding-bottom: 40px;
     display: flex;
@@ -802,7 +799,7 @@ hr {
 .about h1,
 .work h1,
 .contact h1 {
-  color: #707070; }
+  color: #a7a4a4; }
 
 a:not(.nav-link):not(.navbar-brand) {
   text-decoration: none;
