--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.15;
+    opacity: 0.35;
     background-image: url("/img/main.webp");
     background-repeat: no-repeat;
     background-size: cover; }
@@ -327,6 +327,27 @@ nav {
     justify-content: space-around; }
   .category-projects .card a {
     font-size: 13px !important; }
+  .category-projects .card i.video-rest_blog {
+    color: #949797;
+    font-size: 13px !important;
+    align-self: center; }
+  .category-projects .card i.video-rest_blog:hover {
+    color: #c8caca;
+    cursor: pointer; }
+  .category-projects .card i.video-quasartodo {
+    color: #949797;
+    font-size: 13px !important;
+    align-self: center; }
+  .category-projects .card i.video-quasartodo:hover {
+    color: #c8caca;
+    cursor: pointer; }
+  .category-projects .card i.video-yelpcamp {
+    color: #949797;
+    font-size: 13px !important;
+    align-self: center; }
+  .category-projects .card i.video-yelpcamp:hover {
+    color: #c8caca;
+    cursor: pointer; }
   .category-projects .card i.video-blog {
     color: #949797;
     font-size: 13px !important;
@@ -353,6 +374,19 @@ nav {
 .work {
   height: minmax(calc(100vh), auto);
   width: 100vw; }
+  .work .tabs {
+    display: flex;
+    justify-content: space-around;
+    max-width: 800px;
+    margin: 0 auto; }
+    .work .tabs button {
+      min-height: 50px;
+      min-width: 200px;
+      border-radius: 5px;
+      border: none;
+      background-color: #eeffff;
+      margin-top: 20px;
+      cursor: pointer; }
   .work h2 {
     font-size: 25px !important; }
   .work div[class^="category-"] {
