--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -54,60 +54,9 @@
       font-size: 13px !important;
     }
 
-    i.video-rest_blog {
-      color: rgb(148, 151, 151);
+    i.video {
       font-size: 13px !important;
       align-self: center;
-    }
-
-    i.video-rest_blog:hover {
-      color: rgb(200, 202, 202);
-      cursor: pointer;
-    }
-
-    i.video-quasartodo {
-      color: rgb(148, 151, 151);
-      font-size: 13px !important;
-      align-self: center;
-    }
-
-    i.video-quasartodo:hover {
-      color: rgb(200, 202, 202);
-      cursor: pointer;
-    }
-
-
-    i.video-yelpcamp {
-      color: rgb(148, 151, 151);
-      font-size: 13px !important;
-      align-self: center;
-    }
-
-    i.video-yelpcamp:hover {
-      color: rgb(200, 202, 202);
-      cursor: pointer;
-    }
-
-    i.video-blog {
-      color: rgb(148, 151, 151);
-      font-size: 13px !important;
-      align-self: center;
-    }
-
-    i.video-blog:hover {
-      color: rgb(200, 202, 202);
-      cursor: pointer;
-    }
-
-    i.video-sorting {
-      color: rgb(105, 137, 138);
-      font-size: 13px !important;
-      align-self: center;
-    }
-
-    i.video-sorting:hover {
-      color: rgb(165, 190, 190);
-      cursor: pointer;
     }
 
     & a:hover {
