Major Update Add gsap animations. Change images. Update video cards

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -65,10 +65,10 @@
   }
 }
 
-.plane {
+.right-icon {
   transform: scale(2.1);
 }
 
-.macka {
+.left-icon {
   transform: scale(2.3) !important;
 }
