--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.35;
+    opacity: 0.15;
     background-image: url("/img/main.webp");
     background-repeat: no-repeat;
     background-size: cover; }
@@ -91,6 +91,7 @@ body {
       .main-info-section .text a:hover::before {
         height: 100%; }
   .main-info-section .profile-image img {
+    animation: move 2.5s ease infinite;
     height: calc(100vh - 150px);
     max-height: 900px;
     max-width: 550px; }
@@ -100,7 +101,7 @@ body {
     margin-left: 1px; }
   .main-info-section span:not(.word):not(.navbar-toggler-icon):not(.phonespan):hover {
     color: #8cc0f0;
-    animation: bounce 1.3s; }
+    transform: translateY(-5px); }
 
 nav {
   height: 50px;
@@ -333,10 +334,10 @@ nav {
   .category-projects .card a:hover {
     cursor: pointer; }
 
-.plane {
+.right-icon {
   transform: scale(2.1); }
 
-.macka {
+.left-icon {
   transform: scale(2.3) !important; }
 
 .work {
@@ -480,29 +481,29 @@ footer .call span {
   /* Black w/ opacity */ }
 
 .video-card {
+  position: relative;
   background-color: white;
-  width: 80vw;
-  height: 78vh; }
+  max-width: 80vw;
+  max-height: 78vh; }
 
 /* The Close Button */
 .closeContainer {
   border-radius: 50%;
   background-color: white;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 12vh;
-  right: 12vw;
+  position: absolute;
+  top: -25px;
+  right: -25px;
   z-index: 3; }
 
 .close {
   color: #000;
   font-size: 28px;
-  font-weight: bold;
-  transform: scale(1.5); }
+  font-weight: bold; }
 
 .close:hover,
 .close:focus {
@@ -510,13 +511,13 @@ footer .call span {
   cursor: pointer; }
 
 /* animations */
-@keyframes bounce {
+@keyframes move {
   0% {
-    transform: translateY(-7px); }
-  80% {
-    transform: translateY(3px); }
+    transform: translateY(-5px); }
+  50% {
+    transform: translateY(10px); }
   100% {
-    transform: translateY(0px); } }
+    transform: translateY(-5px); } }
 
 /* rotation animation */
 @-webkit-keyframes rotate /* Safari and Chrome */ {
