--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -23,7 +23,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.35;
+    opacity: 0.15;
     background-image: url("/img/main.webp");
     background-repeat: no-repeat;
     background-size: cover;
@@ -82,6 +82,7 @@
   }
 
   .profile-image img {
+    animation: move 2.5s ease infinite;
     height: calc(100vh - 150px);
     max-height: 900px;
     max-width: 550px;
@@ -96,7 +97,7 @@
     }
     &:not(.word):not(.navbar-toggler-icon):not(.phonespan):hover {
       color: #8cc0f0;
-      animation: bounce 1.3s;
+      transform: translateY(-5px);
     }
   }
 }
