--- a/src/sass/components/_video-card.scss
+++ b/src/sass/components/_video-card.scss
@@ -14,23 +14,24 @@
 }
 
 .video-card {
+  position: relative;
   background-color: white;
-  width: 80vw;
-  height: 78vh;
+  max-width: 80vw;
+  max-height: 78vh;
 }
 
 /* The Close Button */
 .closeContainer {
   border-radius: 50%;
   background-color: white;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 12vh;
-  right: 12vw;
+  position: absolute;
+  top: -25px;
+  right: -25px;
   z-index: 3;
 }
 
@@ -38,7 +39,7 @@
   color: #000;
   font-size: 28px;
   font-weight: bold;
-  transform: scale(1.5);
+  //transform: scale(1.5);
 }
 
 .close:hover,
