--- a/src/components/VideoCard/VideoCard.module.css
+++ b/src/components/VideoCard/VideoCard.module.css
@@ -2,21 +2,24 @@
   display: none;
   justify-content: center;
   align-items: center;
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
-  overflow-x: hidden; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  overflow-x: hidden; 
+  background-color: rgb(0, 0, 0); 
+  background-color: rgba(0, 0, 0, 0.4); 
 }
 
 .videoCard {
   position: relative;
   background-color: white;
   max-width: 80vw;
+}
+
+.videoCard video{
   max-height: 78vh;
 }
 
