--- a/src/sections/Main/Main.module.css
+++ b/src/sections/Main/Main.module.css
@@ -28,6 +28,7 @@
 .buttons {
   display: flex;
   justify-content: space-around;
+  gap: 10px;
   margin: 0 auto;
   margin-top: 40px;
 }
@@ -135,6 +136,7 @@
   .buttons {
     flex-direction: column;
     align-items: center;
+    gap: 0px;
   }
 }
 
